<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center">

    <!--    Lottie Animation view for showing the login animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signUpAnimatin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#035B27"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an"
            android:layout_marginEnd="6dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#3C3B3B"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#1D1B1B"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_this_mobile_number"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="#3C3B3B"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:layout_gravity="center"-->
<!--            android:padding="15dp"-->
<!--            android:layout_margin="15dp"-->
<!--            android:background="@color/white">-->

<!--            <EditText-->
<!--                android:id="@+id/editNumber"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="15dp"-->
<!--                android:autofillHints=""-->
<!--                android:background="@drawable/bg_shape"-->
<!--                android:ems="1"-->
<!--                android:hint="@string/type_your_phone_number"-->
<!--                android:inputType="phone"-->
<!--                android:padding="10dp"-->
<!--                android:textColor="#1C1C1C"-->
<!--                android:textColorHint="#757575"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold|normal"-->
<!--                tools:ignore="VisualLintTextFieldSize" />-->

<!--            <Button-->
<!--                android:id="@+id/continueBtn"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/continueBtn"-->
<!--                android:textStyle="bold|normal"-->
<!--                android:textSize="16sp"-->
<!--                android:textAllCaps="false"-->
<!--                tools:ignore="VisualLintButtonSize" />-->


<!--        </LinearLayout>-->





        <!--RelativeLayout: phone number input -->
        <RelativeLayout
            android:id="@+id/phoneInputRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible">

            <!--CountryCodePicker: to pick country code for the phone number -->
            <com.hbb20.CountryCodePicker
                android:id="@+id/phoneCodeTil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="1dp"
                android:gravity="center"
                android:minHeight="56dp"
                android:minWidth="60dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/black"
                app:ccp_rememberLastSelection="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"/>


            <!--TextInputLayout: Input Phone Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_toEndOf="@id/phoneCodeTil"
                android:hint="@string/phone_number"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:startIconDrawable="@drawable/baseline_keyboard_24">

                <EditText
                    android:id="@+id/phoneNumberEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--MaterialButton: Click to send OTP to input phone number
              -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendOtpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumberTil"
                android:layout_marginTop="10dp"
                android:text="Send OTP..."
                android:minHeight="60dp"
                app:cornerRadius="8dp"/>


            <!--TextView: Resend OTP-->
            <TextView
                android:id="@+id/resendotpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:text="@string/does_not_recieve_otp_resend"
                android:layout_below="@id/sendOtpBtn"
                android:padding="5dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>